<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="text_title">AndroidLabs</string>
    <string name="hello_message">Welcome!</string>
    <string name="ButtonText">Setting</string>
    <string name="title_activity_login">Sign in</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="edit_login">E-mail address</string>
    <string name="edit_password">Password</string>
    <string name="radio_button_text">RadioButton</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="switch_text">What does it do?</string>
    <string name="button_login">LOGIN</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="dialog_message">Would you like finish the activity?</string>
    <string name="dialog_title">Dialog</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_chat">Start Chat</string>
    <string name="button_send">SEND</string>
    <string name="delete_history">History Is Deleted</string>
    <string name="delete_last_message">The Last Message Is Deleted</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="message">Message</string>
    <string name="message_id">ID</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="about">About</string>
    <string name="version_info">Version 1.0, by Geyan Huang</string>
    <string name="item_1">You selected item 1</string>
    <string name="item_2">You selected item 2</string>
    <string name="item_3">You selected item 3</string>
    <string name="custom_dialog_title">New Message</string>
</resources>
