<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.cliff.androidlabs.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="120dp"
        style="@style/text_view"
        android:textSize="40dp"
        android:fontFamily="cursive"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/edit_text"
        android:ems="10"
        android:hint="@string/edit_login"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_password"
        style="@style/edit_text"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        style="@style/button"
        android:text="@string/button_login" />
</LinearLayout>
